# legal-term-api

./: Dockerfile  Jenkinsfile  README.md  definitions.jsonl  deployment.yaml  jenkinsfile  manifest.yaml  pyproject.toml  service.yaml
config/: docker.properties
src/: api.py
